# ray-tracing-in-one-weekend-webgpu

./: Cargo.toml  README.md  justfile
src/: cli.rs  gpu.rs  lib.rs  main.rs  shader.wgsl
src/shaders/: mod.rs
src/shaders/example/: mod.rs  shader.wgsl
src/shaders/ray_tracer/: mod.rs  shader.wgsl
src/shaders/workgroup/: mod.rs  shader.wgsl
