[package]
name = "ray-tracing-in-one-weekend-webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }
glam = "0.24.1"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
wgpu = "0.16.2"
